--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,22 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.11.0",
     "cra-template-pwa-typescript": "2.0.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.18.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
