--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
+sqlalchemy==2.0.23
+alembic==1.12.1
+asyncpg==0.29.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
 httpx==0.25.2
-python-dotenv==1.0.0
-requests==2.31.0 
-pytest 
+gitpython==3.1.40
+aiosqlite==0.19.0 
