--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,7 @@ services:
   - type: web
     name: scansec-backend
     env: python
+    runtime: python
+    pythonVersion: 3.12.4
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.16 
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT 
