--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 httpx==0.25.2
 gitpython==3.1.40
-aiosqlite==0.19.0 
+aiosqlite==0.19.0
+pydantic[email]==2.5.0
+email-validator==2.1.0 
