--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,6 +9,6 @@
     }
   ],
   "env": {
-    "REACT_APP_API_URL": "@react_app_api_url"
+    "REACT_APP_API_BASE_URL": "@react_app_api_base_url"
   }
 } 
